<resources>
    <string name="app_name">PetsPassion</string>
    <string name="admin_title">Pets Passion</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="no_product_found">No products found</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_messege">Welcome Back</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_link">Send Reset Link</string>
    <string name="or">Or</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="create_a_new_account">Create a new account?</string>
    <string name="send">Send</string>
    <string name="create_account">Create Account</string>
    <string name="create_your_new_account">Create your new account</string>
    <string name="name">Name</string>
    <string name="email_hints">Email</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_done">Create Done</string>
    <string name="already_have_an_account_hints">Already have an account?</string>
    <string name="default_web_client_id">1046302297913-lod83auffeqh2qjt729jjg9d3pqt35n9.apps.googleusercontent.com</string>
    <string name="profile_image">Profile Image</string>
    <string name="email_address">example@gmail.com</string>
    <string name="account_info">Account Info</string>
    <string name="todo">TODO</string>
    <string name="not_set">Not set</string>
    <string name="address">Address</string>
    <string name="logout">LogOut</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="my_cart">My Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="total">Total</string>
    <string name="check_out">Check Out</string>
    <string name="_0_00">0.00</string>
    <string name="cart_image">Cart Image</string>
    <string name="title">Title</string>
    <string name="plus">Plus</string>
    <string name="initial_quantity">1</string>
    <string name="minus">Minus</string>
    <string name="shipping_subtitle">Please fill out the form below with your details  to proceed to the checkout.</string>
    <string name="category_name">Category Name</string>
    <string name="out_of_stock_hints">OUT OF STOCK</string>
    <string name="percentage">0%</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="no_products_found">No products found</string>
    <string name="product_details">Product details</string>
    <string name="product_description">Product Description</string>
    <string name="buy_now">Buy Now</string>



</resources>