<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/adminHome"
    tools:context=".Create_Account_Page">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="21dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lavender"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_your_new_account"
                android:textColor="#8196D5"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textStyle="italic"
                tools:ignore="MissingConstraints" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/create_name"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="25dp"
                android:padding="8dp"
                android:hint="@string/name"
                android:textStyle="italic"
                android:inputType="textPersonName"
                android:textSize="15sp"
                android:drawableStart="@drawable/name"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:autofillHints="name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/create_email"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="15dp"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textStyle="italic"
                android:textSize="15sp"
                android:hint="@string/email_hints"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:autofillHints="emailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/create_mobile"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="15dp"
                android:padding="8dp"
                android:inputType="phone"
                android:hint="@string/mobile"
                android:textSize="15sp"
                android:drawableStart="@drawable/mobile"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:autofillHints="phone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/create_password"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="15dp"
                android:padding="8dp"
                android:textStyle="italic"
                android:textSize="15sp"
                android:hint="@string/password"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:autofillHints="password"
                android:inputType="textPassword"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/create_repassword"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="15dp"
                android:padding="8dp"
                android:textStyle="italic"
                android:textSize="15sp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:autofillHints="password" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/create_done"
                android:id="@+id/Create_done"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@drawable/custom_button"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavender"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account_hints"
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/login_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:paddingEnd="30dp"
                    android:textColor="#3264F4"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
