<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/adminHome"
    tools:context=".Login_Page">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="21dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_messege"
                android:textSize="29sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/lavender"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_to_your_account"
                android:textColor="#8196D5"
                android:textSize="14sp"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textStyle="italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/login_email"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:textStyle="italic"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                tools:ignore="Autofill" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/login_password"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:textStyle="italic"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password_icon"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                tools:ignore="Autofill" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <CheckBox
                    android:id="@+id/login_password_show_hide"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:text="@string/show_password"
                    android:textStyle="italic"
                    tools:ignore="ObsoleteLayoutParam" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="#3264F4"
                    android:gravity="end"
                    android:textStyle="italic"
                    android:layout_marginEnd="15dp"
                    android:textSize="12sp" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/login"
                android:id="@+id/login_button"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/lavender"
                app:cornerRadius="20dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="#D2D2D2"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/or"
                android:textSize="14sp"
                android:textColor="#8196D5"
                android:textStyle="italic" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/lavender"
                app:buttonSize="wide" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="5dp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/create_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/create_a_new_account"
                    android:textColor="#3264F4"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
