<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/adminHome"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="25dp"
                android:src="@drawable/pic_111"
                android:contentDescription="@string/product_image" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/product_name"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="italic" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/_0_00"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_original_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_00"
                    android:layout_marginEnd="8dp"
                    android:textColor="#635F5F"
                    android:textSize="17sp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:paddingStart="3dp"
                    android:paddingEnd="5dp"
                    android:background="#E64B4B"

                    >
                    <TextView
                        android:id="@+id/product_discount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/percentage"
                        android:textColor="@color/app_theme_light"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/product_details"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/product_description"
                android:textStyle="italic"
                android:textColor="@android:color/black"
                android:textSize="12sp" />


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="#E9EDED"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_buy_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_now"
            android:layout_marginEnd="30dp"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/lavender"
            android:textAllCaps="false"
            android:textSize="13sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/lavender"
            android:textAllCaps="false"
            android:textSize="13sp"
            tools:ignore="ButtonStyle" />


    </LinearLayout>



</RelativeLayout>
