<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/adminHome"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Cart_Fragment">

    <TextView
        android:id="@+id/emptyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_cart_is_empty"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true">


        <TextView
            android:id="@+id/my_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_cart"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/calculation"
        android:layout_below="@id/constraint"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <RelativeLayout
        android:id="@+id/calculation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/checkOutButton"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/Subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/subtotal"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Subtotal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/_0_00"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/Delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Subtotal"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:text="@string/delivery"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Delivery_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Subtotal"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:text="@string/_0_00"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Delivery"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:text="@string/total_tax"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Tax_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Delivery_price"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:text="@string/_0_00"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/Tax_price"
            android:layout_marginTop="8dp"
            android:background="#D2D2D2" />

        <TextView
            android:id="@+id/Total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view2"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/_0_00"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <Button
        android:id="@+id/checkOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/lavender"
        android:text="@string/check_out"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20sp"/>
</RelativeLayout>
